Fixed an issue with the testing composite that caused some tests to have false negatives.

--- a/test/quail.html
+++ b/test/quail.html
@@ -12,6 +12,8 @@
 
 	<script>
 	QUnit.testSuites([
+	  "testfiles/quail/ariaOrphanedContent-pass.html",
+	  "testfiles/quail/ariaOrphanedContent-fail.html",
 	  "testfiles/quail/guidelineLoading.html",
 	  "testfiles/quail/eventComplete.html",
 	  "testfiles/quail/eventTester.html",
@@ -518,9 +520,6 @@
     "testfiles/oac/221-1.html",
     "testfiles/oac/221-2.html",
     "testfiles/oac/221-3.html",
-    "testfiles/oac/221-4.html",
-    "testfiles/oac/221-5.html",
-    "testfiles/oac/221-6.html",
     "testfiles/oac/222-1.html",
     "testfiles/oac/222-2.html",
     "testfiles/oac/222-3.html",
