--- a/test/testfiles/oac/221-2.html
+++ b/test/testfiles/oac/221-2.html
@@ -7,11 +7,9 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body bgcolor="#ffffff" text="#000000">
-<div id="qunit-wrapper">
-
-</div>
-
+<div id="quail-scope">
 <p>This is some example text.</p>
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
