--- a/test/testfiles/oac/42-1.html
+++ b/test/testfiles/oac/42-1.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-
+<div id="quail-scope">
 <p>This is</p> <h1>very important</h1> <p>and you should read it.</p>
-
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
