--- a/test/testfiles/oac/43-2.html
+++ b/test/testfiles/oac/43-2.html
@@ -7,14 +7,10 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-<h3 id="qunit-banner"></h3>
-<div id="qunit-testrunner-toolbar"></div>
-<h3 id="qunit-userAgent"></h3>
-<ol id="qunit-tests"></ol>
-<div id="qunit-fixture">test markup, will be hidden</div>
+<div id="quail-scope">
 
 <p>This is <strong>very important</strong> and you should read it.</p>
-
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
