--- a/test/testfiles/oac/82-9.html
+++ b/test/testfiles/oac/82-9.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-
+<div id="quail-scope">
 <p>Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
 <p>Looks like a header, but it's not.</p>
 <p>Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
-
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
