--- a/test/testfiles/oac/86-1.html
+++ b/test/testfiles/oac/86-1.html
@@ -6,10 +6,11 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-
+<div id="quail-scope">
 <script>
 	var dummyScript = 'hello';
 </script>
+</div>
 <noscript>Alternate content for script</noscript>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
