--- a/test/testfiles/quail/headersHaveText-fail2.html
+++ b/test/testfiles/quail/headersHaveText-fail2.html
@@ -5,15 +5,13 @@
 	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 	</head>
 	<body>
-	<div id="qunit-testrunner-toolbar"></div>
-<h2 id="qunit-userAgent"></h2>
-<ol id="qunit-tests"></ol>
-<div id="qunit-fixture">test markup, will be hidden</div>
+<div id="quail-scope">
 
 	<h1>This is a correct header</h1>
 	<p>Intrinsicly actualize web-enabled users and cross functional growth strategies. Monotonectally simplify B2B opportunities vis-a-vis top-line processes.</p>	
 	<h2><img src="rex.jpg"></h2>
 	<p>Globally synergize ethical process improvements before go forward technology. Synergistically seize backward-compatible quality vectors through magnetic sources. Distinctively reintermediate virtual "outside the box" thinking without market positioning supply chains.</p>
+</div>
 	<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
   <script id="qunit-quail" src="../../../src/quail.js"></script>
