--- a/test/testfiles/quail/liDontUseImageForBullet-fail.html
+++ b/test/testfiles/quail/liDontUseImageForBullet-fail.html
@@ -10,9 +10,9 @@
 
 <p>
   <ul>
-    <li><img src="bullet.gif">This is item one</li>
-    <li><img src="bullet.gif">This is item two</li>
-    <li><img src="bullet.gif">This is item three</li>
+    <li><img src="bullet.png">This is item one</li>
+    <li><img src="bullet.png">This is item two</li>
+    <li><img src="bullet.png">This is item three</li>
   </ul>
 </p>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
