--- a/test/testfiles/quail/liDontUseImageForBullet-pass.html
+++ b/test/testfiles/quail/liDontUseImageForBullet-pass.html
@@ -3,16 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8" />
-<title>List items don't use images for bullets - Check #1 - Positive</title>
+<title>List items don't use images for bullets - Check #1 - Negative</title>
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
 
 <p>
   <ul>
-    <li><img src="bullet.gif">This is item one</li>
-    <li><img src="bullet.gif">This is item two</li>
-    <li><img src="bullet.gif">This is item three</li>
+    <li>This is item one</li>
+    <li>This is item two</li>
+    <li>This is item three</li>
   </ul>
 </p>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
