--- a/test/testfiles/oac/197-4.html
+++ b/test/testfiles/oac/197-4.html
@@ -8,7 +8,7 @@
 <body>
 
 <p>This is the introduction to a news story about recent spending by our government.
-<a href="spending.html" title="recent government spending">more</a></p>
+<a href="spending.html">read more</a></p>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
@@ -17,7 +17,7 @@
 <script>
 test('aSuspiciousLinkText', function() {
 	  quailTest.runTest( 'aSuspiciousLinkText', '197-4.html');
-	  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+	  equal(true, quailTest.confirmIsTag('a'), 'First item tag test');
 });
 </script>
 </body>
