--- a/test/testfiles/oac/246-2.html
+++ b/test/testfiles/oac/246-2.html
@@ -7,8 +7,7 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-
-
+<div id="quail-scope">
 <form action="http://www.test.com">
 
 <p>
@@ -22,7 +21,7 @@
 </p>
 
 </form>
-
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
