--- a/test/testfiles/oac/87-2.html
+++ b/test/testfiles/oac/87-2.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-
+<div id="quail-scope">
+<p>There are no scripts here</p>
+</body>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
@@ -16,7 +18,7 @@
 <script id="qunit-script">
 test('scriptsDoNotFlicker', function() {
   quailTest.runTest( 'scriptsDoNotFlicker', '87-2.html');
-  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+  equal(true, quailTest.confirmIsTag('script'), 'First item tag test');
 });
 </script>
 </body>
