--- a/test/testfiles/oac/98-2.html
+++ b/test/testfiles/oac/98-2.html
@@ -7,8 +7,9 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-
+<div id="quail-scope">
 <p>hello</p>
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
@@ -17,6 +18,7 @@
 <script id="qunit-script">
 test('documentAbbrIsUsed', function() {
   quailTest.runTest( 'documentAbbrIsUsed', '98-2.html');
+  console.log(quailTest.results.documentAbbrIsUsed);
   equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
 });
 </script>
