--- a/test/testfiles/oac/98-4.html
+++ b/test/testfiles/oac/98-4.html
@@ -7,8 +7,10 @@
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
+<div id="quail-scope">
 
 <p>This might be A acronym.</p>
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
