--- a/test/testfiles/oac/99-2.html
+++ b/test/testfiles/oac/99-2.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
+<div id="quail-scope">
 <p>Hi</p>
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
