--- a/test/testfiles/quail/ariaOrphanedContent-pass.html
+++ b/test/testfiles/quail/ariaOrphanedContent-pass.html
@@ -2,20 +2,22 @@
 <html>
 	<head>
 	<link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
-		<title>Document is written to no more than a 9.9 grade level - Pass</title>
+		<title>Pages using aria role do not contain orphaned conent - Fail</title>
 	</head>
 	<body>
-		<div id="quail-scope">
-	<p>The quick brown fox jumped over the lazy dogs.</p>
-		</div>
+	<div role="main">
+
+    <div role="header">This is a header</div>
+    <div role="footer">This is a footer</div>
+	</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
-		<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
+	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
 <script id="qunit-script">
-test('documentIsWrittenClearly', function() {
-  quailTest.runTest( 'documentIsWrittenClearly', 'documentIsWrittenClearly-pass-2.html');
+test('ariaOrphanedContent', function() {
+  quailTest.runTest( 'ariaOrphanedContent', 'ariaOrphanedContent-pass.html');
     equal(true, quailTest.confirmIsEmpty(), 'Item is empty');
 });
 </script>
