--- a/test/testfiles/quail/documentIsWrittenClearly-pass.html
+++ b/test/testfiles/quail/documentIsWrittenClearly-pass.html
@@ -5,8 +5,9 @@
 		<title>Document is written to no more than a 9.9 grade level - Pass</title>
 	</head>
 	<body>
-		
+		<div id="quail-scope">
 	<p>The quick brown fox jumped over the lazy dogs. The quick brown fox jumped over the lazy dogs. The quick brown fox jumped over the lazy dogs. The quick brown fox jumped over the lazy dogs. The quick brown fox jumped over the lazy dogs. The quick brown fox jumped over the lazy dogs.</p>
+		</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 			<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
