Added editing example to the PHP page.

--- a/examples/php/sample.html
+++ b/examples/php/sample.html
@@ -19,7 +19,10 @@
 	<h1 class="title">Page one</h1>
 	<div class="row">
   	<div class="span9">
-    	
+    	<ul class="nav nav-tabs">
+        <li class="active"><a href="sample.html">View</a></li>
+        <li><a href="edit.html">Edit</a></li>
+      </ul>
   	  <div id="content">
   	    <p><b>This is a sample page with a ton of issues. First, this should be a header</b></p>
   	    <p>There's also some un-marked abbreviations that QUAIL can look out for. Oops, missed another one.</p>
