Changed from "severity" to "testability" per #27.
Still need to figure out what to do with results.

--- a/test/testfiles/quail/guidelineLoading.html
+++ b/test/testfiles/quail/guidelineLoading.html
@@ -28,7 +28,7 @@
                       reset : true,
                       accessibilityTests : data,
                       testFailed : function(event) {
-                        if(event.severity == 'severe' && event.testName == 'imgHasAlt') {
+                        if(event.testability == 1 && event.testName == 'imgHasAlt') {
                           testPasses = true;
                         }
                       }});
