--- a/test/testfiles/oac/5-1.html
+++ b/test/testfiles/oac/5-1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<img src="https://github.com/kevee/quail/raw/master/testfiles/oac/rex.jpg" alt="  " width="150" height="105"/>
+<img src="rex.jpg" alt="  " width="150" height="105"/>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
 <script id="qunit-quail" src="../../../src/quail.js"></script>
