Made aMustContainText ignore anchors with names or ids. Fixes #35

--- a/test/quail.html
+++ b/test/quail.html
@@ -428,6 +428,7 @@
     "testfiles/oac/174-3.html",
     "testfiles/oac/174-4.html",
     "testfiles/oac/174-5.html",
+    "testfiles/oac/174-6.html",
     "testfiles/oac/175-1.html",
     "testfiles/oac/175-2.html",
     "testfiles/oac/176-1.html",
