Added pre-filter option. Fixes #33

--- a/test/quail.html
+++ b/test/quail.html
@@ -13,6 +13,7 @@
 	<script>
 	QUnit.testSuites([
       "testfiles/quail/customTest.html",
+      "testfiles/quail/preFilter.html",
 	  "testfiles/quail/ariaOrphanedContent-pass.html",
 	  "testfiles/quail/ariaOrphanedContent-fail.html",
 	  "testfiles/quail/guidelineLoading.html",
