Added fallback behavior if guideline is not defined. Fixes #28

--- a/test/quail.html
+++ b/test/quail.html
@@ -14,6 +14,7 @@
 	QUnit.testSuites([
       "testfiles/quail/customTest.html",
       "testfiles/quail/preFilter.html",
+      "testfiles/quail/guidelineFallback.html",
 	  "testfiles/quail/ariaOrphanedContent-pass.html",
 	  "testfiles/quail/ariaOrphanedContent-fail.html",
 	  "testfiles/quail/guidelineLoading.html",
