--- a/test/testfiles/quail/guidelineFallback.html
+++ b/test/testfiles/quail/guidelineFallback.html
@@ -6,7 +6,13 @@
 	</head>
 	<body>
     <div class="test-area">
-    	<p>This is an image <img src="../oac/rex.jpg">.</p>
+    	<p>
+    		This is a paragraph.
+    	</p>
+    	<p class="error">
+    		This is a paragraph we are testing for.<img src="../oac/rex.jpg"/>
+    	</p>
+    	<h2 class="callback-error">Heading!</h2>
     </div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 	<script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
@@ -14,31 +20,14 @@
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
 <script id="qunit-script">
-test('customTest', function() {
-  var testResults = [];
-  $('.test-area').quail({ jsonPath : '../../../src/resources',
-                      guideline : [ 'imgHasAlt' ],
-                      reset : true,
-                      preFilter : function(testName, element) {
+test('guidelineFallback', function() {
 
-                      },
+  $('.test-area').quail({ jsonPath : '../../../src/resources',
+                      reset : true,
                       complete : function(results) {
                         testResults = results.results;
                       }});
-  equal(1, testResults.imgHasAlt.length, 'Image was found.');
-
-  $('.test-area').quail({ jsonPath : '../../../src/resources',
-                      guideline : [ 'imgHasAlt' ],
-                      reset : true,
-                      preFilter : function(testName, element) {
-                        if(element.get(0).tagName == 'IMG') {
-                          return false;
-                        }
-                      },
-                      complete : function(results) {
-                        testResults = results.results;
-                      }});
-  equal(0, testResults.imgHasAlt.length, 'Image was filtered out.');
+  equal('IMG', testResults.imgHasAlt[0].get(0).tagName, 'Default guideline has run');
 });
 </script>
 	</body>
