--- a/test/quail.html
+++ b/test/quail.html
@@ -17,6 +17,8 @@
       "testfiles/quail/guidelineFallback.html",
 	  "testfiles/quail/ariaOrphanedContent-pass.html",
 	  "testfiles/quail/ariaOrphanedContent-fail.html",
+        "testfiles/quail/cssTextHasContrast-fail.html",
+        "testfiles/quail/cssTextHasContrast-pass.html",
 	  "testfiles/quail/guidelineLoading.html",
 	  "testfiles/quail/eventComplete.html",
 	  "testfiles/quail/eventTester.html",
