Added test to find links only separated by symbols.

--- a/test/quail.html
+++ b/test/quail.html
@@ -49,6 +49,8 @@
             "testfiles/quail/documentIsWrittenClearly-pass.html",
             "testfiles/quail/documentIsWrittenClearly-fail.html",
             "testfiles/quail/documentIsWrittenClearly-pass-2.html",
+            "testfiles/quail/aLinksNotSeparatedBySymbols-fail.html",
+            "testfiles/quail/aLinksNotSeparatedBySymbols-pass.html",
             "testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail-2.html",
             "testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail.html",
             "testfiles/common/aAdjacentWithSameResourceShouldBeCombined-pass.html",
