--- a/test/testfiles/common/scriptOndblclickRequiresOnKeypress-fail.html
+++ b/test/testfiles/common/scriptOndblclickRequiresOnKeypress-fail.html
@@ -7,8 +7,9 @@
 <body>
 
 
+<div id="quail-scope">
 <input name="num" ondblclick="bar" value="0"/>
-
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
