--- a/test/testfiles/common/scriptOnmouseoverHasOnfocus-fail.html
+++ b/test/testfiles/common/scriptOnmouseoverHasOnfocus-fail.html
@@ -8,7 +8,9 @@
 <body>
 
 
-<INPUT name="num" onmouseover="foo" value="0">
+<div id="quail-scope">
+<input name="num" onmouseover="foo" value="0">
+</div>
 
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
