--- a/test/testfiles/common/scriptOnclickRequiresOnKeypress-fail.html
+++ b/test/testfiles/common/scriptOnclickRequiresOnKeypress-fail.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-
-<input name="num" onclick="foo" value="0" />
-
+<div id="quail-scope">
+	<input name="num" onclick="foo" value="0" />
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
