--- a/test/testfiles/common/scriptOnmousedownRequiresOnKeypress-pass.html
+++ b/test/testfiles/common/scriptOnmousedownRequiresOnKeypress-pass.html
@@ -8,8 +8,9 @@
 <body>
 
 
+<div id="quail-scope">
 <input name="num" onmousedown="foo" onkeydown="bar" value="0"/>
-
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
