--- a/test/testfiles/common/scriptOnmouseoutHasOnmouseblur-pass.html
+++ b/test/testfiles/common/scriptOnmouseoutHasOnmouseblur-pass.html
@@ -8,8 +8,9 @@
 <body>
 
 
-<INPUT name="num" onmouseout="foo" onblur="bar" value="0">
-
+<div id="quail-scope">
+<input name="num" onmouseout="foo" onblur="bar" value="0">
+</div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
