Changed tests.json to tests.yml, added build step to grunt and updated tests.

--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -29,7 +29,7 @@
           };
   	 
   	 $('#test').quail({ guideline : [ 'imgHasAlt' ],
-	                    jsonPath : '../../src/resources',
+	                    jsonPath : '../../dist',
 	                    accessibilityTests : accessibilityTests,
 	                    testFailed : function(event) {
   	                    event.element.addClass('quail-result')
