--- a/test/testfiles/quail/eventComplete.html
+++ b/test/testfiles/quail/eventComplete.html
@@ -17,7 +17,7 @@
 <script>
   test('quailEventComplete', function() {
    var testPasses = false;
-   $.ajax({ url : '../../../src/resources/tests.json',
+   $.ajax({ url : '../../../dist/tests.json',
      async : false,
      dataType : 'json',
      cache : false,
