--- a/test/testfiles/quail/guidelineFallback.html
+++ b/test/testfiles/quail/guidelineFallback.html
@@ -22,7 +22,7 @@
 <script id="qunit-script">
 test('guidelineFallback', function() {
 
-  $('.test-area').quail({ jsonPath : '../../../src/resources',
+  $('.test-area').quail({ jsonPath : '../../../dist',
                       reset : true,
                       complete : function(results) {
                         testResults = results.results;
