--- a/test/quail.html
+++ b/test/quail.html
@@ -15,6 +15,8 @@
             "testfiles/quail/customTest.html",
             "testfiles/quail/preFilter.html",
             "testfiles/quail/guidelineFallback.html",
+            "testfiles/quail/acronymTestsDontFailForOtherTags-pass.html",
+            "testfiles/quail/acronymTestsDontFailForOtherTags-fail.html",
             "testfiles/quail/ariaOrphanedContent-pass.html",
             "testfiles/quail/ariaOrphanedContent-fail.html",
             "testfiles/quail/cssTextHasContrast-fail.html",
