--- a/test/testfiles/quail/acronymTestsDontFailForOtherTags-fail.html
+++ b/test/testfiles/quail/acronymTestsDontFailForOtherTags-fail.html
@@ -2,22 +2,25 @@
 
 <html lang="en">
 <head>
-<title>documentAcronymsHaveElement-pass</title>
+<title>acronymTestsDontFailForOtherTags-fail</title>
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-
 <div id="quail-scope">
-<p>Hi this is a document with no acronyms.</p>
+
+<p>Everyone loves QUAIL and AAAA.</p>
 </div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
 <script id="qunit-script">
-test('documentAcronymsHaveElement', function() {
-  quailTest.runTest( 'documentAcronymsHaveElement', '99-2.html');
-  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+test('acronymTestsDontFailForOtherTags', function() {
+  quailTest.runTest('documentAbbrIsUsed');
+  equal(true, quailTest.confirmIsTag('p'), 'First item is a paragraphe');
+  
+  quailTest.runTest('documentAcronymsHaveElement');
+  equal(true, quailTest.confirmIsTag('p'), 'First item is a paragraphe');
 });
 </script>
 </body>
