--- a/test/testfiles/quail/acronymTestsDontFailForOtherTags-pass.html
+++ b/test/testfiles/quail/acronymTestsDontFailForOtherTags-pass.html
@@ -2,21 +2,23 @@
 
 <html lang="en">
 <head>
-<title>documentAcronymsHaveElement-pass</title>
+<title>acronymTestsDontFailForOtherTags-pass</title>
 <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
 </head>
 <body>
-
 <div id="quail-scope">
-<p>Hi this is a document with no acronyms.</p>
+
+<p>Everyone loves <abbr title="Quail accesibility information library">QUAIL</abbr> and <acronym title="Another Amazing Acronym Association">AAAA</acronym>.</p>
 </div>
 <script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
 <script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
 <script id="qunit-script">
-test('documentAcronymsHaveElement', function() {
-  quailTest.runTest( 'documentAcronymsHaveElement', '99-2.html');
+test('acronymTestsDontFailForOtherTags', function() {
+  quailTest.runTest('documentAbbrIsUsed');
+  equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
+  quailTest.runTest('documentAcronymsHaveElement');
   equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
 });
 </script>
