Added custom grunt task to make a simple test array from a guideline JSON file.

--- a/test/quail.html
+++ b/test/quail.html
@@ -21,7 +21,7 @@
             "testfiles/quail/ariaOrphanedContent-fail.html",
             "testfiles/quail/cssTextHasContrast-fail.html",
             "testfiles/quail/cssTextHasContrast-pass.html",
-            //"testfiles/quail/guidelineLoading.html",
+            "testfiles/quail/guidelineLoading.html",
             "testfiles/quail/eventComplete.html",
             "testfiles/quail/eventTester.html",
             "testfiles/quail/headersHaveText-fail.html",
