--- a/test/testfiles/quail/guidelineLoading.html
+++ b/test/testfiles/quail/guidelineLoading.html
@@ -17,14 +17,14 @@
 <script>
   test('quailEventTester', function() {
    var testPasses = false;
-   $.ajax({ url : '../../../src/resources/tests.json',
+   $.ajax({ url : '../../../dist/tests.json',
      async : false,
      dataType : 'json',
      cache : false,
      success : function(data) {
         if(typeof data === 'object') {
-          $(document).quail({ jsonPath : '../../../src/resources',
-                      guideline : '508',
+          $(document).quail({ jsonPath : '../../../dist',
+                      guideline : '508.tests',
                       reset : true,
                       accessibilityTests : data,
                       testFailed : function(event) {
