Included iFrames in frame having a title test. Added unit tests.

--- a/test/quail.html
+++ b/test/quail.html
@@ -271,6 +271,8 @@
             "testfiles/common/formWithRequiredLabel-fail.html",
             "testfiles/common/formWithRequiredLabel-pass-2.html",
             "testfiles/common/formWithRequiredLabel-pass.html",
+            "testfiles/common/framesHaveATitle-fail.html",
+            "testfiles/common/framesHaveATitle-pass.html",
             "testfiles/common/headerH1-fail.html",
             "testfiles/common/headerH1-pass.html",
             "testfiles/common/headerH2-fail.html",
