--- a/test/quail.html
+++ b/test/quail.html
@@ -273,6 +273,8 @@
             "testfiles/common/formWithRequiredLabel-pass.html",
             "testfiles/common/framesHaveATitle-fail.html",
             "testfiles/common/framesHaveATitle-pass.html",
+            "testfiles/common/frameTitlesNotPlaceholder-fail.html",
+            "testfiles/common/frameTitlesNotPlaceholder-pass.html",
             "testfiles/common/headerH1-fail.html",
             "testfiles/common/headerH1-pass.html",
             "testfiles/common/headerH2-fail.html",
