Fixed default loading of guidelines to append .tests.json.

--- a/test/testfiles/quail/guidelineLoading.html
+++ b/test/testfiles/quail/guidelineLoading.html
@@ -24,7 +24,7 @@
      success : function(data) {
         if(typeof data === 'object') {
           $(document).quail({ jsonPath : '../../../dist',
-                      guideline : '508.tests',
+                      guideline : '508',
                       reset : true,
                       accessibilityTests : data,
                       testFailed : function(event) {
