Added basic configuration on a per-guideline basis for any test. Related to #79.

--- a/test/quail.html
+++ b/test/quail.html
@@ -13,6 +13,7 @@
 	<script>
 	QUnit.testSuites([
             "testfiles/quail/customTest.html",
+            "testfiles/quail/testConfiguration.html",
             "testfiles/quail/preFilter.html",
             "testfiles/quail/guidelineFallback.html",
             "testfiles/quail/acronymTestsDontFailForOtherTags-pass.html",
