Fixed errors related to newer qunit.

--- a/test/testfiles/common/cssDocumentMakesSenseStyleTurnedOff-fail.html
+++ b/test/testfiles/common/cssDocumentMakesSenseStyleTurnedOff-fail.html
@@ -4,7 +4,7 @@
 <head>
 <title>cssDocumentMakesSenseStyleTurnedOff-fail</title>
 <link href="docB" rel="stylesheet">
-<link rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css" media="screen">
+<link id="qunit-style" rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css" media="screen">
 </head>
 <body>
 
