--- a/test/testfiles/quail/customTest.html
+++ b/test/testfiles/quail/customTest.html
@@ -37,7 +37,7 @@ test('customTest', function() {
   		}
   	}
   };
-  $('.test-area').quail({ jsonPath : '../../../src/resources',
+  $('.test-area').quail({ jsonPath : '../../../dist',
                       guideline : [ 'customTestSelector', 'customTestCallback' ],
                       reset : true,
                       customTests : custom,
