--- a/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail-2.html
+++ b/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail-2.html
@@ -9,10 +9,10 @@
 <a href="products.html"><img src="resources/icon.gif" alt="" /></a>
 <a href="products.html">Products page</a>
 </p>
-<script id="qunit-jquery" src="../../../libs/jquery/jquery.js"></script>
+<script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
 <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
 <script id="qunit-composite" src="../../composite.js"></script>
-<script id="qunit-qunit" src="../../../libs/qunit/qunit.js"></script>
+<script id="qunit-qunit" src="../../../lib/qunit/qunit/qunit.js"></script>
 <script id="qunit-script">
 test('aAdjacentWithSameResourceShouldBeCombined', function() {
 	  quailTest.runTest( 'aAdjacentWithSameResourceShouldBeCombined', '232-1.html');
