--- a/test/testfiles/common/appletContainsTextEquivalent-pass.html
+++ b/test/testfiles/common/appletContainsTextEquivalent-pass.html
@@ -7,7 +7,13 @@
     </head>
     
     <body>
-        <applet code="Press.class" width="500" height="500">As temperature increases, the molecules in the balloon...</applet>
+        <applet code="http://www.java.com/en/download/JavaDetection.class" width="500" height="150">
+            We are testing your Java version.
+            <param name="image" value="http://www.java.com/im/download/verify_anim.gif">
+            <param name="centerimage" value="true"><param name="boxborder" value="false">
+            <param name="jnlp_href" value="http://www.java.com/en/download/JavaDetection_applet.jnlp">
+        </applet>
+        <script>var setUserInfo = function() { };</script>
         <script
         id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
             <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
