--- a/test/testfiles/common/appletProvidesMechanismToReturnToParent-fail.html
+++ b/test/testfiles/common/appletProvidesMechanismToReturnToParent-fail.html
@@ -9,8 +9,12 @@
     
     <body>
         <p>The following applet is not working. This is just an example.</p>
-        <applet
-        code="Press1.class" width="500" height="500"></applet>
+        <applet code="http://www.java.com/en/download/JavaDetection.class" width="500" height="150">
+            <param name="image" value="http://www.java.com/im/download/verify_anim.gif">
+            <param name="centerimage" value="true"><param name="boxborder" value="false">
+            <param name="jnlp_href" value="http://www.java.com/en/download/JavaDetection_applet.jnlp">
+        </applet>
+        <script>var setUserInfo = function() { };</script>
             <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
             <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
             <script id="qunit-composite" src="../../composite.js"></script>
