Fixed sample pages. Removed bootstrap from samples.

--- a/examples/php/edit.html
+++ b/examples/php/edit.html
@@ -3,7 +3,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Sample page | My CMS</title>
 		<link rel="stylesheet" href="../common/style.css"/>
-		<link rel="stylesheet" href="../common/bootstrap.css"/>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css"/>
     <style>
       #edit {
         width: 100%;
