--- a/examples/wysiwyg/aloha.html
+++ b/examples/wysiwyg/aloha.html
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 	
-	<script src="../../libs/jquery/jquery.js"></script>
+	<script src="../../lib/jquery/jquery.js"></script>
 	<script src="editors/aloha/aloha/lib/require.js"></script>
 	<script src="editors/aloha/aloha/lib/vendor/jquery-1.7.2.js"></script>
 	<script src="editors/aloha/aloha/lib/aloha.js" data-aloha-plugins="common/ui,common/format,common/highlighteditables,common/link,extra/quail"></script>
