--- a/examples/wysiwyg/tinymce.html
+++ b/examples/wysiwyg/tinymce.html
@@ -15,7 +15,7 @@
 	 </textarea>
 	</div>
 	
-	<script src="../../libs/jquery/jquery.js"></script>
+	<script src="../../lib/jquery/jquery.js"></script>
 	<script src="editors/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
 	<script src="../../dist/quail.jsquery.js"></script>
 	<script src="../../dist/wysiwyg_plugins/tinymce/quail/editor_plugin.js"></script>
