--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -11,8 +11,8 @@
 	 <img src="../common/kogepan.png">
 	</div>
 	
-	<script src="../../libs/jquery/jquery.js"></script>
-	<script src="../../dist/quail.jsquery.js"></script>
+	<script src="../../lib/jquery/jquery.js"></script>
+	<script src="../../dist/quail.jquery.js"></script>
 	<script>
 	 $(document).ready(function() {
   	 
