--- a/examples/wysiwyg/ckeditor.html
+++ b/examples/wysiwyg/ckeditor.html
@@ -17,7 +17,7 @@
 	 </form>
 	</div>
 	
-	<script src="../../libs/jquery/jquery.js"></script>
+	<script src="../../lib/jquery/jquery.js"></script>
 	<script src="editors/ckeditor/ckeditor.js"></script>
 	<script src="../../dist/quail.jsquery.js"></script>
 	<script src="../../dist/wysiwyg_plugins/ckeditor/quail/plugin.js"></script>
