--- a/examples/editors/aloha.html
+++ b/examples/editors/aloha.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Aloha Editor Example</title>
-	<link rel="stylesheet" href="editors/aloha/aloha/css/aloha.css" type="text/css">
-	<link rel="stylesheet" href="editors/aloha/aloha/demo/simple/index.css" type="text/css">
+	<link rel="stylesheet" href="http://cdn.aloha-editor.org/latest/css/aloha.css" type="text/css">
+	<link rel="stylesheet" href="../../lib/aloha-editor/aloha/demo/simple/index.css" type="text/css">
 		<link rel="stylesheet" href="../common/style.css"/>
 	</head>
 	<body>
@@ -20,10 +20,11 @@
 	</div>
 	
 	<script src="../../lib/jquery/jquery.js"></script>
-	<script src="editors/aloha/aloha/lib/require.js"></script>
-	<script src="editors/aloha/aloha/lib/vendor/jquery-1.7.2.js"></script>
-	<script src="editors/aloha/aloha/lib/aloha.js" data-aloha-plugins="common/ui,common/format,common/highlighteditables,common/link,extra/quail"></script>
+	<script type="text/javascript" src="http://cdn.aloha-editor.org/latest/lib/require.js"></script>
+	<script src="http://cdn.aloha-editor.org/latest/lib/aloha.js" data-aloha-plugins="common/ui,common/format,common/highlighteditables,common/link"></script>
 	<script src="../../dist/quail.jsquery.js"></script>
+	<script src="plugins/aloha/quail/vendor/tipsy.js"></script>
+	<script src="plugins/aloha/quail/lib/quail-plugin.js"></script>
 	<script type="text/javascript">
 	 Aloha.settings.quail = {
   	 tests : {
@@ -41,8 +42,8 @@
         },
      },
      guideline : [ 'imgHasAlt', 'documentAbbrIsUsed' ],
-     path : '../../src/resources',
-     baseUrl : '../../dist/wysiwyg_plugins/',
+     path : '../../dist',
+     baseUrl : '../../lib/',
      title : function(event) {
        if(event.testName == 'documentAbbrIsUsed') {
          return 'The acronym ' + event.options.acronym + ' needs to be within an acronym tag.';
