Added more strings to suspicious link text per #96. Also added another test.

--- a/test/quail.html
+++ b/test/quail.html
@@ -127,6 +127,7 @@
             "testfiles/common/aSuspiciousLinkText-fail-3.html",
             "testfiles/common/aSuspiciousLinkText-fail.html",
             "testfiles/common/aSuspiciousLinkText-pass-2.html",
+            "testfiles/common/aSuspiciousLinkText-pass-3.html",
             "testfiles/common/aSuspiciousLinkText-pass.html",
             "testfiles/common/aTitleDescribesDestination-fail.html",
             "testfiles/common/aTitleDescribesDestination-pass.html",
