Added test focusIndicatorVisible to test for technique G195. Related to #78

--- a/test/quail.html
+++ b/test/quail.html
@@ -245,6 +245,12 @@
             "testfiles/common/fileHasLabel-pass.html",
             "testfiles/common/fileLabelIsNearby-fail.html",
             "testfiles/common/fileLabelIsNearby-pass.html",
+            "testfiles/common/focusIndicatorVisible-pass.html",
+            "testfiles/common/focusIndicatorVisible-fail.html",
+            "testfiles/common/focusIndicatorVisible-pass-2.html",
+            "testfiles/common/focusIndicatorVisible-pass-3.html",
+            "testfiles/common/focusIndicatorVisible-fail-2.html",
+            "testfiles/common/focusIndicatorVisible-fail-3.html",
             "testfiles/common/fontIsNotUsed-fail.html",
             "testfiles/common/fontIsNotUsed-pass.html",
             "testfiles/common/formDeleteIsReversable-fail-2.html",
